<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".EditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/editTitle"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="50dp"
        android:hint="@string/airportNameContainer"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_style"/>

    <EditText
        android:id="@+id/et_edit_city"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:minHeight="50dp"
        android:hint="@string/airportCityContainer"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_style"/>

    <EditText
        android:id="@+id/et_edit_address"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:hint="@string/airportAddressContainer"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_style"/>

    <Button
        android:id="@+id/btn_edit_data"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/editContainer"
        app:cornerRadius="16dp"/>

</LinearLayout>