<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_list_airport"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/bg_style">

        <TextView
            android:id="@+id/tv_list_item_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:visibility="gone"
            android:text="@string/idContainer"/>

        <TextView
            android:id="@+id/tv_list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/airportNameContainer"/>

        <TextView
            android:id="@+id/tv_list_item_city_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/airportCityAddressContainer"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>